frontend/test/should_pass/enum_006.grg
using attrib_model_001, enum_model_003;

rule r {
	x:NINT - l:B -> k:A;

	modify{
		eval { x.a = (l.e == k.e) ? 0 : 1; }
	}
}
