frontend/test/should_fail/cast_003.grg
using attrib_model_001, enum_model_001;

rule r {
	x: NFLOAT;
	k: A;

	modify {
		eval {
			k.e = (te) x.a;
		}
	}
}
